--- a/style.css
+++ b/style.css
@@ -64,6 +64,11 @@ footer {
   background: radial-gradient(circle, rgba(149, 219, 121, 1) 0%, rgba(130, 177, 68, 0.904) 100%);
 }
 
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+}
 /* -------------- clases ----------------------- */
 
 .ig {
@@ -105,7 +110,8 @@ footer {
 }
 
 .colorParrafo {
-  color: rgb(233, 215, 51);
+  color: rgb(30, 66, 8);
+
 }
 
 .textRight {
@@ -138,8 +144,42 @@ footer {
 .espacio {
   margin: 0 10px;
 }
-.flex {
+
+.contenedor1 {
   display: flex;
-  justify-content: flex-start;
-  }
- 
+  flex-direction: row;
+  align-items: center;
+}
+
+.contenedor2 {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+}
+
+.marcasAlineadas {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+}
+
+.marcaVegetalex {
+  grid-column: 3;
+  grid-row: 4;
+}
+
+.marcaGreenLife {
+  grid-column: 3;
+  grid-row: 2;
+}
+
+.marcaVivet {
+  grid-column: -4;
+  grid-row: 4;
+}
+
+.marcaVeggieland {
+  grid-column: -4;
+  grid-row: 2;
+}
