--- a/style.css
+++ b/style.css
@@ -64,13 +64,7 @@ footer {
   background: radial-gradient(circle, rgba(149, 219, 121, 1) 0%, rgba(130, 177, 68, 0.904) 100%);
 }
 
-@media only screen and (max-width: 600px) {
-  body {
-    background-color: lightblue;
-  }
-}
 /* -------------- clases ----------------------- */
-
 .ig {
   color: rgb(12, 59, 6);
   font-style: serif;
@@ -137,10 +131,6 @@ footer {
   font-size: 1.5rem;
 }
 
-.listaColum {
-  max-width: 200px;
-}
-
 .espacio {
   margin: 0 10px;
 }
@@ -182,4 +172,50 @@ footer {
 .marcaVeggieland {
   grid-column: -4;
   grid-row: 2;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+
+  .contenedor1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .contenedor2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  ul {
+    font-size: 0.8rem;
+  }
+
+  h1 {
+    font-size: 3.5rem;
+    font-style: oblique;
+    text-align: center;
+
+  }
+
+  p {
+    font-size: 1.4rem;
+    font-style: serif;
+    font-weight: 300;
+    text-align: center;
+  }
+
+  .colorParrafo {
+    color: rgb(168, 184, 26);
+
+  }
+
+  .marcasAlineadas {
+    display: flex;
+    flex-direction: column;
+  }
 }
