--- a/views/contacto.html
+++ b/views/contacto.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/reset.css" type="text/css">
+    <link rel="stylesheet" href="/styles/style.css" type="text/css">
     <title>contacto - menta y peperina</title>
 </head>
 
 <body>
     <header>
-        <img class="logo" src="imagenes/logito.png" alt="logo">
+        <img class="logo" src="/imagenes/logito.png" alt="logo">
         <ul>
-            <li class="espacio"><a href="index.html">Inicio</a> </li>
-            <li class="espacio"><a href="recetas.html">Recetas </a> </li>
-            <li class="espacio"><a href="sobrenosotros.html">Nosotros </a> </li>
-            <li class="espacio"><a href="marcas.html">Marcas </a> </li>
-            <li class="seleccionado espacio"><a href="contacto.html">Contacto </a> </li>
+            <li class="espacio"><a href="/index.html">Inicio</a> </li>
+            <li class="espacio"><a href="/views/recetas.html">Recetas </a> </li>
+            <li class="espacio"><a href="/views/sobrenosotros.html">Nosotros </a> </li>
+            <li class="espacio"><a href="/views/marcas.html">Marcas </a> </li>
+            <li class="seleccionado espacio"><a href="/views/contacto.html">Contacto </a> </li>
         </ul>
     </header>
     <main>
