--- a/views/marcas.html
+++ b/views/marcas.html
@@ -20,7 +20,7 @@
             <li class="espacio"><a href="/views/contacto.html">Contacto </a> </li>
         </ul>
     </header>
-    <h1>MARCAS</h1>
+    <h1 class="titulo">MARCAS</h1>
     <p class="subtitulos">Estas son las marcas que utilizamos y recomendamos utilizar,no solo por la calidad de los
         productos sino tambien
         porque algunos son veganos y sin tacc.</p>
@@ -45,10 +45,11 @@
             <h3>Green Life</h3>
             <p class="negrita">Marca de productos vegana</p>
         </article>
-    </section>   
+    </section>
     <br>
 </body>
 <footer>
     <span>Nuestro Instagram:<a href="https://www.instagram.com/mentaypeperinaok"> MENTA Y PEPERINA</a> </span>
 </footer>
+
 </html>
