--- a/views/recetas.html
+++ b/views/recetas.html
@@ -13,15 +13,15 @@
 <body>
     <header>
         <img class="logo" src="/imagenes/logito.png" alt="logo">
-    <ul class="navegacion">
-      <li class=" espacio"> <a href="/index.html">Inicio</a> </li>
-      <li class="seleccionado espacio"><a href="/views/recetas.html">Recetas </a> </li>
-      <li class="espacio"><a href="/views/sobrenosotros.html">Nosotros </a> </li>
-      <li class="espacio"><a href="/views/marcas.html">Marcas </a> </li>
-      <li class="espacio"><a href="/views/contacto.html">Contacto </a> </li>
-    </ul>
+        <ul class="navegacion">
+            <li class=" espacio"> <a href="/index.html">Inicio</a> </li>
+            <li class="seleccionado espacio"><a href="/views/recetas.html">Recetas </a> </li>
+            <li class="espacio"><a href="/views/sobrenosotros.html">Nosotros </a> </li>
+            <li class="espacio"><a href="/views/marcas.html">Marcas </a> </li>
+            <li class="espacio"><a href="/views/contacto.html">Contacto </a> </li>
+        </ul>
     </header>
-    <h1>RECETAS</h1>
+    <h1 class="titulo">RECETAS</h1>
     <ul>
         <li class="subtitulos negrita fondoVeganas"><a href="https://www.google.com/">Veganas</a> </li>
         <li class="subtitulos negrita"><a href="https://www.google.com/">Sopas</a> </li>
