--- a/views/sobrenosotros.html
+++ b/views/sobrenosotros.html
@@ -21,7 +21,7 @@
             <li class="espacio"><a href="/views/contacto.html">Contacto </a> </li>
         </ul>
     </header>
-    <h1>¿QUIENES SOMOS?</h1>
+    <h1 class="titulo">¿QUIENES SOMOS?</h1>
     <P class="textoCentrado">Somos dos amigos que empezaron a tener una dieta sin productos de origen animal y nos dimos
         cuenta que el
         pensar ¿que comemos hoy? era algo agotador por eso decidimos crear esta pagina.
