--- a/styles/style.css
+++ b/styles/style.css
@@ -32,12 +32,10 @@ h1 {
   font-style: oblique;
   text-align: center;
   font-weight: bold;
-
-
 }
 
 h3 {
-  color: rgb(140, 177, 6);
+  color: rgb(184, 233, 10);
   font-style: serif;
   font-size: 2rem;
   border: rgba(141, 190, 28, 0.199) 5px solid;
@@ -47,6 +45,7 @@ h3 {
 h4 {
   font-size: 1.25rem;
   font-style: serif;
+
 }
 
 a {
@@ -80,8 +79,24 @@ footer {
   margin-bottom: 50px;
 }
 
+.subtitulos:hover {
+  color: rgba(212, 162, 22, 0.877);
+  transition: color;
+  transition-timing-function: linear;
+}
+
 .seleccionado {
   background-color: rgb(200, 255, 0);
+}
+
+.titulo {
+  background-color: none;
+}
+
+.titulo:hover {
+  color: rgb(7, 75, 18);
+  transition: color;
+  transition-timing-function: linear;
 }
 
 .foto1 {
@@ -136,19 +151,21 @@ footer {
 .espacio {
   margin: 0 10px;
 }
+
 .fotosAlineadas {
   display: grid;
   column-gap: 500px;
 }
+
 .contenedor1 {
   grid-column: 1;
   grid-row: 1;
-  }
+}
 
 .contenedor2 {
   grid-column: 3;
   grid-row: 3;
-  }
+}
 
 .marcasAlineadas {
   display: grid;
@@ -176,6 +193,12 @@ footer {
   grid-column: -4;
   grid-row: 2;
 }
+
+.ColorNegro {
+  color: black;
+}
+
+
 
 @media only screen and (max-width: 600px) {
   body {
