--- a/views/contacto.html
+++ b/views/contacto.html
@@ -22,14 +22,14 @@
         </ul>
     </header>
     <main>
-        <h1>CONTACTO</h1>
+        <h1 class="titulo">CONTACTO</h1>
         <p class="subtitulos">
             Si tienes cualquier duda, sugerencia o propuesta, no dudes en escribirnos y contárnos todo!
             Podes ponerte en contacto con nosotros a través del siguiente formulario, o escribirnos a @mentaypeperinaok.
             Te contestaremos en cuánto me sea posible, muchas gracias de antemano.
         </p>
         <form action="http://jkorpela.fi/cgi-bin/echo.cgi">
-            <h3>Formulario de contacto</h3>
+            <h3 class="ColorNegro">Formulario de contacto</h3>
             <label for="firstname">Nombre:</label>
             <input type="text" id="firstname" name="nombre">
             <label for="Coment">Comentario</label>
