--- a/views/marcas.html
+++ b/views/marcas.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/reset.css" type="text/css">
-    <link rel="stylesheet" href="/styles/style.css" type="text/css">
+    <link rel="stylesheet" href="../styles/reset.css" type="text/css">
+    <link rel="stylesheet" href="../styles/style.css" type="text/css">
     <title>Marcas</title>
 </head>
 
 <body>
     <header>
-        <img class="logo" src="/imagenes/logito.png" alt="logo">
+        <img class="logo" src="../imagenes/logito.png" alt="logo">
         <ul>
-            <li class="espacio"> <a href="/index.html">Inicio</a> </li>
-            <li class="espacio"><a href="/views/recetas.html">Recetas </a> </li>
-            <li class="espacio"><a href="/views/sobrenosotros.html">Nosotros </a> </li>
-            <li class="seleccionado espacio"><a href="/views/marcas.html">Marcas </a> </li>
-            <li class="espacio"><a href="/views/contacto.html">Contacto </a> </li>
+            <li class="espacio"> <a href="../index.html">Inicio</a> </li>
+            <li class="espacio"><a href="../views/recetas.html">Recetas </a> </li>
+            <li class="espacio"><a href="../views/sobrenosotros.html">Nosotros </a> </li>
+            <li class="seleccionado espacio"><a href="../views/marcas.html">Marcas </a> </li>
+            <li class="espacio"><a href="../views/contacto.html">Contacto </a> </li>
         </ul>
     </header>
     <h1 class="titulo">MARCAS</h1>
@@ -26,22 +26,22 @@
         porque algunos son veganos y sin tacc.</p>
     <section class="marcasAlineadas">
         <article class="marcaVeggieland">
-            <img class="fotoMarca" src="/imagenes/veggieland.jpg" alt="logo veggieland">
+            <img class="fotoMarca" src="../imagenes/veggieland.jpg" alt="logo veggieland">
             <h3>Veggieland</h3>
             <p class="negrita">Marca argentina vegetariana</p>
         </article>
         <article class="marcaVegetalex">
-            <img class="fotoMarca" src="/imagenes/vegetalex logo.jpg" alt="logo vegetalex">
+            <img class="fotoMarca" src="../imagenes/vegetalex logo.jpg" alt="logo vegetalex">
             <h3>Vegetalex</h3>
             <p class="negrita">Marca argentina vegana y vegetariana</p>
         </article>
         <article class="marcaVivet">
-            <img class="fotoMarca" src="/imagenes/vivet.png" alt="vivet logo">
+            <img class="fotoMarca" src="../imagenes/vivet.png" alt="vivet logo">
             <h3>Vivet</h3>
             <p class="negrita">Marca argentina de lacteos veganos</p>
         </article>
         <article class="marcaGreenLife">
-            <img class="fotoMarca" src="/imagenes/greenlife.jpg" alt="green life logo">
+            <img class="fotoMarca" src="../imagenes/greenlife.jpg" alt="green life logo">
             <h3>Green Life</h3>
             <p class="negrita">Marca de productos vegana</p>
         </article>
