--- a/views/sobrenosotros.html
+++ b/views/sobrenosotros.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/reset.css" type="text/css">
-    <link rel="stylesheet" href="/styles/style.css" type="text/css">
+    <link rel="stylesheet" href="../styles/reset.css" type="text/css">
+    <link rel="stylesheet" href="../styles/style.css" type="text/css">
     <title>Nosotros</title>
 </head>
 
 <body>
     <header>
-        <img class="logo" src="/imagenes/logito.png" alt="logo">
+        <img class="logo" src="../imagenes/logito.png" alt="logo">
         <ul>
-            <li class="espacio"><a href="/index.html">Inicio</a> </li>
-            <li class="espacio"><a href="/views/recetas.html">Recetas </a> </li>
-            <li class="seleccionado espacio"><a href="/views/sobrenosotros.html">Nosotros </a> </li>
-            <li class="espacio"><a href="/views/marcas.html">Marcas </a> </li>
-            <li class="espacio"><a href="/views/contacto.html">Contacto </a> </li>
+            <li class="espacio"><a href="../index.html">Inicio</a> </li>
+            <li class="espacio"><a href="../views/recetas.html">Recetas </a> </li>
+            <li class="seleccionado espacio"><a href="../views/sobrenosotros.html">Nosotros </a> </li>
+            <li class="espacio"><a href="../views/marcas.html">Marcas </a> </li>
+            <li class="espacio"><a href="../views/contacto.html">Contacto </a> </li>
         </ul>
     </header>
     <h1 class="titulo">¿QUIENES SOMOS?</h1>
@@ -34,7 +34,7 @@
         gusto. También hay religiones que lo impiden y hay quienes por
         consideraciones medioambientales toman esta decisión.
     </P>
-    <img src="/imagenes/giphy.gif" alt="gif comiendo brocoli" width="300">
+    <img src="../imagenes/giphy.gif" alt="gif comiendo brocoli" width="300">
     <p class="colorParrafo"> Esperamos que te gusten nuestras recetas como a nosotros.</p>
 </body>
 <br>
