--- a/views/recetas.html
+++ b/views/recetas.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <img class="logo" src="../imagenes/logito.png" alt="logo">
-        <ul class="navegacion">
+        <ul>
             <li class=" espacio"> <a href="../index.html">Inicio</a> </li>
             <li class="seleccionado espacio"><a href="../views/recetas.html">Recetas </a> </li>
             <li class="espacio"><a href="../views/sobrenosotros.html">Nosotros </a> </li>
@@ -23,17 +23,16 @@
     </header>
     <h1 class="titulo">RECETAS</h1>
     <ul>
-        <li class="subtitulos negrita fondoVeganas"><a href="https://www.google.com/">Veganas</a> </li>
-        <li class="subtitulos negrita"><a href="https://www.google.com/">Sopas</a> </li>
-        <li class="subtitulos negrita"><a href="https://www.google.com/">Ensaladas</a> </li>
-        <li class="subtitulos negrita"><a href="https://www.google.com/">Pastas</a> </li>
-        <li class="subtitulos negrita"><a href="https://www.google.com/">Tartas</a> </li>
-        <li class="subtitulos negrita"><a href="https://www.google.com/">No carne</a> </li>
+        <li class="subtitulos negrita listaRecetas "><a href="https://www.google.com/">Veganas</a> </li>
+        <li class="subtitulos negrita listaRecetas"><a href="https://www.google.com/">Sopas</a> </li>
+        <li class="subtitulos negrita listaRecetas"><a href="https://www.google.com/">Ensaladas</a> </li>
+        <li class="subtitulos negrita listaRecetas"><a href="https://www.google.com/">Pastas</a> </li>
+        <li class="subtitulos negrita listaRecetas"><a href="https://www.google.com/">Tartas</a> </li>
+        <li class="subtitulos negrita listaRecetas"><a href="https://www.google.com/">No carne</a> </li>
     </ul>
+    <footer>
+        <span>Nuestro Instagram:<a href="https://www.instagram.com/mentaypeperinaok"> MENTA Y PEPERINA</a> </span>
+    </footer>
 </body>
-<br>
-<footer>
-    <span>Nuestro Instagram:<a href="https://www.instagram.com/mentaypeperinaok"> MENTA Y PEPERINA</a> </span>
-</footer>
 
 </html>
