--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@ h1 {
 }
 
 h3 {
-  color: rgb(184, 233, 10);
+  color: rgb(136, 233, 10);
   font-style: serif;
   font-size: 2rem;
   border: rgba(141, 190, 28, 0.199) 5px solid;
@@ -65,6 +65,7 @@ footer {
   background: radial-gradient(circle, rgba(149, 219, 121, 1) 0%, rgba(130, 177, 68, 0.904) 100%);
 }
 
+
 /* -------------- clases ----------------------- */
 .ig {
   color: rgb(12, 59, 6);
@@ -72,21 +73,30 @@ footer {
 }
 
 .subtitulos {
-  color: black;
-  font-size: 1.5rem;
   font-weight: 100;
   width: 100%;
   margin-bottom: 50px;
 }
 
-.subtitulos:hover {
+.listaRecetas {
+  color: black;
+}
+
+.listaRecetas:hover {
   color: rgba(212, 162, 22, 0.877);
   transition: color;
   transition-timing-function: linear;
+  background-image: url('../imagenes/tAHXsh.jpg');
 }
 
 .seleccionado {
   background-color: rgb(200, 255, 0);
+  font-weight: 400;
+}
+
+.espacio:hover {
+  text-decoration: underline;
+  font-weight: 600;
 }
 
 .titulo {
@@ -152,19 +162,20 @@ footer {
   margin: 0 10px;
 }
 
-.fotosAlineadas {
-  display: grid;
-  column-gap: 600px;
+.contenidoPrincipal {
+  margin: 0 40px;
+  min-height: 100vh;
 }
 
 .contenedor1 {
-  grid-column: 1;
-  grid-row: 1;
+  display: flex;
+  align-items: center;
 }
 
 .contenedor2 {
-  grid-column: 3;
-  grid-row: 3;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
 }
 
 .marcasAlineadas {
@@ -198,6 +209,59 @@ footer {
   color: black;
 }
 
+.formulario {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 30px;
+}
+
+.labelForm {
+  color: aliceblue;
+  font-size: 1.2rem;
+  font-weight: 100;
+  margin: 10px 0;
+}
+
+.botonEnviar {
+  box-shadow: 0px 1px 0px 0px #3dc21b;
+  background: linear-gradient(to bottom, #44c767 5%, #5cbf2a 100%);
+  background-color: #44c767;
+  border-radius: 15px;
+  border: 2px solid #18ab29;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: Arial;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 12px 16px;
+  text-decoration: none;
+  text-shadow: 0px 1px 0px #2f6627;
+}
+
+.botonEnviar:hover {
+  background: linear-gradient(to bottom, #5cbf2a 5%, #44c767 100%);
+  background-color: #5cbf2a;
+}
+
+.botonEnviar:active {
+  position: relative;
+  top: 1px;
+}
+
+.maps {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.direccion{
+background-color: rgb(240, 240, 240);
+margin: 10px;
+padding: 10px;
+width: 300px;
+}
 
 
 @media only screen and (max-width: 600px) {
