--- a/styles/style.css
+++ b/styles/style.css
@@ -109,14 +109,7 @@ footer {
   transition-timing-function: linear;
 }
 
-.foto1 {
-  width: 300px;
-  height: 300px;
-  border-radius: 10%;
-  border: 5px solid rgba(168, 209, 21, 0.233);
-}
-
-.foto2 {
+.foto {
   width: 300px;
   height: 300px;
   border-radius: 10%;
