--- a/views/contacto.html
+++ b/views/contacto.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/reset.css" type="text/css">
     <link rel="stylesheet" href="../styles/style.css" type="text/css">
     <title>contacto - menta y peperina</title>
@@ -28,15 +30,30 @@
             Podes ponerte en contacto con nosotros a través del siguiente formulario, o escribirnos a @mentaypeperinaok.
             Te contestaremos en cuánto me sea posible, muchas gracias de antemano.
         </p>
-        <form class="formulario" action="http://jkorpela.fi/cgi-bin/echo.cgi">
-            <h3 class="ColorNegro">Formulario de contacto</h3>
-            <label class="labelForm" for="firstname">Nombre:</label>
-            <input required type="text" id="firstname" name="nombre">
-            <label class="labelForm" for="email">Mail:</label>
-            <input required type="email" id="email" name="email">
-            <label class="labelForm" for="coment">Comentario</label>
-            <textarea required name="comentario" id="coment" cols="40" rows="10"></textarea>
-            <button class="botonEnviar" type="submit">Enviar</button>
+        <div class="container">
+            <form role="form">
+                <div class="mb-3 row">
+                    <label for="name" class="form-label col-sm-12 col-md-2">Nombre</label>
+                    <div class="col-sm-12 col-md-10">
+                        <input type="text" class="form-control" id="name" placeholder="Juana">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="exampleFormControlInput1" class="form-label col-sm-12 col-md-2">Correo
+                        electrónico</label>
+                    <div class="col-sm-12 col-md-10">
+                        <input type="email" class="form-control" id="exampleFormControlInput1"
+                            placeholder="name@example.com">
+                    </div>
+                </div>
+                <div class="mb-3 row">
+                    <label for="exampleFormControlTextarea1" class="form-label col-sm-12 col-md-2">Comentario</label>
+                    <div class="col-sm-12 col-md-10">
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                </div>
+        </div>
+        <button type="submit" class="btn btn-success">Enviar</button>
         </form>
     </main>
     <div class="maps">
@@ -57,6 +74,9 @@
     <footer>
         <span>Nuestro Instagram:<a href="https://www.instagram.com/mentaypeperinaok"> MENTA Y PEPERINA</a> </span>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
