--- a/views/marcas.html
+++ b/views/marcas.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/reset.css" type="text/css">
-    <link rel="stylesheet" href="../styles/style.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="../css/index.css" type="text/css">
     <title>Marcas</title>
 </head>
 
@@ -20,7 +20,7 @@
             <li class="espacio"><a href="../views/contacto.html">Contacto </a> </li>
         </ul>
     </header>
-    <h1 class="titulo">MARCAS</h1>
+    <h1 class="titulo animate__animated animate__bounce">MARCAS</h1>
     <p class="subtitulos">Estas son las marcas que utilizamos y recomendamos utilizar,no solo por la calidad de los
         productos sino tambien
         porque algunos son veganos y sin tacc.</p>
