--- a/views/sobrenosotros.html
+++ b/views/sobrenosotros.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/reset.css" type="text/css">
-    <link rel="stylesheet" href="../styles/style.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="../css/index.css" type="text/css">
     <title>Nosotros</title>
 </head>
 
@@ -21,7 +21,7 @@
             <li class="espacio"><a href="../views/contacto.html">Contacto </a> </li>
         </ul>
     </header>
-    <h1 class="titulo">¿QUIENES SOMOS?</h1>
+    <h1 class="titulo animate__animated animate__bounce">¿QUIENES SOMOS?</h1>
     <P class="textoCentrado">Somos dos amigos que empezaron a tener una dieta sin productos de origen animal y nos dimos
         cuenta que el
         pensar ¿que comemos hoy? era algo agotador por eso decidimos crear esta pagina.
