--- a/views/contacto.html
+++ b/views/contacto.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../styles/reset.css" type="text/css">
-    <link rel="stylesheet" href="../styles/style.css" type="text/css">
+    <link rel="stylesheet" href="../css/index.css" type="text/css">
+    
     <title>contacto - menta y peperina</title>
 </head>
 
@@ -24,7 +25,7 @@
         </ul>
     </header>
     <main>
-        <h1 class="titulo">CONTACTO</h1>
+        <h1 class="titulo animate__animated animate__bounce">CONTACTO</h1>
         <p class="subtitulos textoCentrado">
             Si tienes cualquier duda, sugerencia o propuesta, no dudes en escribirnos y contárnos todo!
             Podes ponerte en contacto con nosotros a través del siguiente formulario, o escribirnos a @mentaypeperinaok.
