--- a/views/recetas.html
+++ b/views/recetas.html
@@ -5,24 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/reset.css" type="text/css">
-    <link rel="stylesheet" href="../styles/style.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link rel="stylesheet" href="../css/index.css" type="text/css">
     <title>Recetas</title>
 </head>
 
 <body>
     <header>
         <img class="logo" src="../imagenes/logito.png" alt="logo">
-        <ul>
-            <li class=" espacio"> <a href="../index.html">Inicio</a> </li>
-            <li class="seleccionado espacio"><a href="../views/recetas.html">Recetas </a> </li>
+        <ul >
+            <li class="espacio"> <a href="../index.html">Inicio</a> </li>
+            <li class="espacio seleccionado"><a href="../views/recetas.html">Recetas </a> </li>
             <li class="espacio"><a href="../views/sobrenosotros.html">Nosotros </a> </li>
             <li class="espacio"><a href="../views/marcas.html">Marcas </a> </li>
             <li class="espacio"><a href="../views/contacto.html">Contacto </a> </li>
         </ul>
     </header>
-    <h1 class="titulo">RECETAS</h1>
-    <ul>
+    <h1 class="titulo animate__animated animate__bounce">RECETAS</h1>
+    <ul class="listado">
         <li class="subtitulos negrita listaRecetas "><a href="https://www.google.com/">Veganas</a> </li>
         <li class="subtitulos negrita listaRecetas"><a href="https://www.google.com/">Sopas</a> </li>
         <li class="subtitulos negrita listaRecetas"><a href="https://www.google.com/">Ensaladas</a> </li>
