agrege sass y mixin

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,3 +1,5 @@
+/*mixin*/
+@import './views/_mixin.scss';
 /* Fuente de google fonts raleway */
 @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 /* misc */ 
