--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
+/*mixin*/
 /* Fuente de google fonts raleway */
 @import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 /* misc */
@@ -79,154 +80,9 @@ p {
   width: 100%;
   margin-bottom: 50px; }
 
-.listaRecetas {
-  color: black; }
-
-.listado {
-  min-height: 100vh; }
-
-.listaRecetas:hover {
-  color: rgba(212, 162, 22, 0.877);
-  transition: color;
-  transition-timing-function: linear;
-  background-image: url("../imagenes/tAHXsh.jpg"); }
-
-.titulo {
-  background-color: none; }
-
-.titulo:hover {
-  color: #074b12;
-  transition: color;
-  transition-timing-function: linear; }
-
-.foto {
-  width: 300px;
-  height: 300px;
-  border-radius: 10%;
-  border: 5px solid rgba(168, 209, 21, 0.233); }
-
-.fotoMarca {
-  width: 100px;
-  height: 100px;
-  border-radius: 10%;
-  border: 5px solid white; }
-
-.colorParrafo {
-  color: #bdd85d; }
-
-.textRight {
-  text-align: right; }
-
-.textoCentrado {
-  text-align: center; }
-
-.borde {
-  border: rgba(141, 190, 28, 0.199) 5px solid; }
-
-.logo {
-  position: absolute;
-  left: 0;
-  width: 60px; }
-
-.negrita {
-  font-weight: bold;
-  font-size: 1.5rem; }
-
-.espacio {
-  margin: 0 10px; }
-
-.espacioseleccionado {
+.seleccionado {
   background-color: #c8ff00;
   font-weight: 400; }
-
-.espacio:hover {
-  text-decoration: underline;
-  font-weight: 600; }
-
-.contenidoPrincipal {
-  margin: 0 40px;
-  min-height: 100vh; }
-
-.contenedor1 {
-  display: flex;
-  align-items: center; }
-
-.contenedor2 {
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: center; }
-
-.marcasAlineadas {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
-  grid-auto-rows: minmax(100px, auto); }
-
-.marcaVegetalex {
-  grid-column: 3;
-  grid-row: 4; }
-
-.marcaGreenLife {
-  grid-column: 3;
-  grid-row: 2; }
-
-.marcaVivet {
-  grid-column: -4;
-  grid-row: 4; }
-
-.marcaVeggieland {
-  grid-column: -4;
-  grid-row: 2; }
-
-.ColorNegro {
-  color: black; }
-
-.formulario {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 30px; }
-
-.labelForm {
-  color: aliceblue;
-  font-size: 1.2rem;
-  font-weight: 100;
-  margin: 10px 0; }
-
-.botonEnviar {
-  box-shadow: 0px 1px 0px 0px #3dc21b;
-  background: linear-gradient(to bottom, #44c767 5%, #5cbf2a 100%);
-  background-color: #44c767;
-  border-radius: 15px;
-  border: 2px solid #18ab29;
-  display: inline-block;
-  cursor: pointer;
-  color: #ffffff;
-  font-family: Arial;
-  font-size: 14px;
-  font-weight: bold;
-  padding: 12px 16px;
-  text-decoration: none;
-  text-shadow: 0px 1px 0px #2f6627; }
-
-.botonEnviar:hover {
-  background: linear-gradient(to bottom, #5cbf2a 5%, #44c767 100%);
-  background-color: #5cbf2a; }
-
-.botonEnviar:active {
-  position: relative;
-  top: 1px; }
-
-.maps {
-  display: flex;
-  flex-direction: column;
-  align-items: center; }
-
-.direccion {
-  background-color: #f0f0f0;
-  margin: 10px;
-  padding: 10px;
-  width: 300px; }
 
 @media only screen and (max-width: 600px) {
   body {
@@ -278,10 +134,18 @@ header {
   left: 0;
   width: 60px; }
 
+/* query */
+@media only screen and (max-width: 600px) {
+  header ul {
+    font-size: 0.8rem; } }
+
 footer {
   background: #95db79;
   background: radial-gradient(circle, #95db79 0%, rgba(130, 177, 68, 0.904) 100%);
-  text-align: center; }
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%; }
 
 .ig {
   color: #0c3b06;
@@ -369,15 +233,9 @@ p {
 /* query */
 @media only screen and (max-width: 600px) {
   body {
-    background-color: #d7e6ad; }
-  .contenedor1 {
-    display: flex;
-    flex-direction: column;
-    align-items: center; }
-  .contenedor2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center; }
+    background-color: #d7e6ad;
+    position: relative;
+    padding-bottom: 3em; }
   ul {
     font-size: 0.8rem; }
   h1 {
@@ -389,6 +247,7 @@ p {
     font-style: serif;
     font-weight: 300;
     text-align: center; }
+  /*clases*/
   .colorParrafo {
     color: #a8b81a; }
   .marcasAlineadas {
@@ -420,6 +279,37 @@ p {
 
 .colorTextoPrincipal {
   color: white; }
+
+/* query */
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: #d7e6ad;
+    position: relative;
+    padding-bottom: 3em; }
+  .contenedor1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .contenedor2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .foto {
+    border-radius: 10%;
+    border: 5px solid rgba(168, 209, 21, 0.233); }
+    .foto:hover {
+      border-radius: 50%;
+      -webkit-border-radius: 50%;
+      box-shadow: 0px 0px 15px 15px #d5e784;
+      -webkit-box-shadow: 0px 0px 15px 15px #c6dda7;
+      transform: rotate(360deg);
+      -webkit-transform: rotate(360deg); }
+  .titulo {
+    background-color: none; }
+    .titulo:hover {
+      color: #074b12;
+      transition: color;
+      transition-timing-function: linear; } }
 
 .formulario {
   display: flex;
@@ -466,15 +356,16 @@ p {
   padding: 10px;
   width: 300px; }
 
+.botonHover:hover, .listaRecetas:hover {
+  color: rgba(212, 162, 22, 0.877);
+  transition: color;
+  transition-timing-function: linear;
+  background-image: url("../imagenes/tAHXsh.jpg"); }
+
 .listaRecetas {
   color: black;
   display: flex;
   justify-content: center; }
-  .listaRecetas:hover {
-    color: rgba(212, 162, 22, 0.877);
-    transition: color;
-    transition-timing-function: linear;
-    background-image: url("../imagenes/tAHXsh.jpg"); }
 
 .marcasAlineadas {
   display: grid;
@@ -497,3 +388,9 @@ p {
 .marcaVeggieland {
   grid-column: -4;
   grid-row: 2; }
+
+.fotoMarca {
+  width: 100px;
+  height: 100px;
+  border-radius: 10%;
+  border: 5px solid white; }
