--- a/scss/views/_index.scss
+++ b/scss/views/_index.scss
@@ -24,6 +24,50 @@
         -webkit-transform: rotate(360deg);
     }
 }
+
 .colorTextoPrincipal {
     color: white;
+}
+
+/* query */
+
+@media only screen and (max-width: 600px) {
+    body {
+        background-color: rgb(215, 230, 173);
+        position: relative;
+        padding-bottom: 3em;
+    }
+
+    .contenedor1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contenedor2 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .foto {
+        border-radius: 10%;
+        border: 5px solid rgba(168, 209, 21, 0.233);
+
+        &:hover {
+            @include hover-effect
+        }
+    }
+
+    .titulo {
+        background-color: none;
+
+
+        &:hover {
+            color: rgb(7, 75, 18);
+            transition: color;
+            transition-timing-function: linear;
+        }
+    }
+
 }
