--- a/scss/views/_marcas.scss
+++ b/scss/views/_marcas.scss
@@ -25,3 +25,10 @@
     grid-column: -4;
     grid-row: 2;
   }
+
+  .fotoMarca {
+    width: 100px;
+    height: 100px;
+    border-radius: 10%;
+    border: 5px solid rgb(255, 255, 255);
+  }
