--- a/scss/views/partials/_common.scss
+++ b/scss/views/partials/_common.scss
@@ -111,18 +111,8 @@ p {
 @media only screen and (max-width: 600px) {
     body {
         background-color: rgb(215, 230, 173);
-    }
-
-    .contenedor1 {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .contenedor2 {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+        position: relative;
+        padding-bottom: 3em;
     }
 
     ul {
@@ -143,6 +133,7 @@ p {
         text-align: center;
     }
 
+    /*clases*/
     .colorParrafo {
         color: rgb(168, 184, 26);
 
