--- a/scss/views/partials/_header.scss
+++ b/scss/views/partials/_header.scss
@@ -1,28 +1,39 @@
 header {
-    padding: 0;
-    margin: 0;
-    margin-top: 20px;
-    text-align: right;
-    line-height: 35px;
-  
+  padding: 0;
+  margin: 0;
+  margin-top: 20px;
+  text-align: right;
+  line-height: 35px;
+
+  ul {
+    font-size: 1.3rem;
+  }
+
+  li {
+    display: inline-block;
+    line-height: 1.5;
+    text-align: center;
+  }
+
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+}
+
+.logo {
+  position: absolute;
+  left: 0;
+  width: 60px
+}
+
+/* query */
+
+@media only screen and (max-width: 600px) {
+  header{
+
     ul {
-      font-size: 1.3rem;
-    }
-  
-    li {
-      display: inline-block;
-      line-height: 1.5;
-      text-align: center;
-    }
-  
-    a {
-      text-decoration: none;
-      color: inherit;
+      font-size: 0.8rem;
     }
   }
-  .logo {
-    position: absolute;
-    left: 0;
-    width: 60px
-  }
-  
+}
