--- a/scss/views/partials/_common.scss
+++ b/scss/views/partials/_common.scss
@@ -41,6 +41,7 @@ p {
 }
 
 /* Clases en comun*/
+
 .subtitulos {
     font-weight: 100;
     width: 100%;
@@ -49,15 +50,23 @@ p {
 
 .espacio {
     margin: 0 10px;
+    padding: 10px;
 
     &:hover {
-        text-decoration: underline;
+        text-decoration: none;
         font-weight: 600;
     }
 }
 
+.espacioseleccionado {
+    background-color: #c8ff00;
+    font-weight: 400;
+}
+
+
 .titulo {
     background-color: none;
+    padding: 0 0 40px;
 
 
     &:hover {
@@ -67,7 +76,6 @@ p {
     }
 }
 
-/*clases*/
 
 .contenidoPrincipal {
     margin: 0 40px;
@@ -85,6 +93,7 @@ p {
 
 .textoCentrado {
     text-align: center;
+    padding: 30px;
 }
 
 .borde {
@@ -97,14 +106,16 @@ p {
     font-size: 1.5rem;
 }
 
-.espacio {
-    margin: 0 10px;
-}
-
 .ColorNegro {
     color: black;
 }
-
+ 
+.bodyCentrado {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin:10px 50px;
+}
 
 /* query */
 
