--- a/scss/views/partials/_footer.scss
+++ b/scss/views/partials/_footer.scss
@@ -1,14 +1,14 @@
 footer {
-    background: rgb(149, 219, 121);
-    background: radial-gradient(circle, rgba(149, 219, 121, 1) 0%, rgba(130, 177, 68, 0.904) 100%);
-    text-align: center;
-    position: absolute;
-    bottom:0;
-    width: 100%;
-  }
-  
-  .ig {
-    color: rgb(12, 59, 6);
-    font-style: serif;
-  }
-  
+  margin: 0;
+  background: rgb(149, 219, 121);
+  background: radial-gradient(circle, rgba(149, 219, 121, 1) 0%, rgba(130, 177, 68, 0.904) 100%);
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  position: fixed;
+}
+
+.ig {
+  color: rgb(12, 59, 6);
+  font-style: serif;
+}
