--- a/views/contacto.html
+++ b/views/contacto.html
@@ -9,69 +9,73 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/index.css" type="text/css">
-    
+
     <title>contacto - menta y peperina</title>
 </head>
 
-<body class="textoCentrado">
-    <header>
-        <img class="logo" src="../imagenes/logito.png" alt="logo">
+<body>
+    <header class="d-flex justify-content-between">
+        <img class="navbar-brand" src="../imagenes/logito.png" width="80" alt="logo">
         <ul>
-            <li class="espacio"><a href="../index.html">Inicio</a> </li>
-            <li class="espacio"><a href="../views/recetas.html">Recetas </a> </li>
-            <li class="espacio"><a href="../views/sobrenosotros.html">Nosotros </a> </li>
-            <li class="espacio"><a href="../views/marcas.html">Marcas </a> </li>
-            <li class="seleccionado espacio"><a href="../views/contacto.html">Contacto </a> </li>
+            <li class=" espacio"> <a href="../index.html">Inicio</a> </li>
+            <li class=" espacio"><a href="recetas.html">Recetas </a> </li>
+            <li class="espacio"><a href="sobrenosotros.html">Nosotros </a> </li>
+            <li class="espacio"><a href="marcas.html">Marcas </a> </li>
+            <li class="seleccionado espacio"><a href="contacto.html">Contacto </a> </li>
         </ul>
     </header>
-    <main>
-        <h1 class="titulo animate__animated animate__bounce">CONTACTO</h1>
-        <p class="subtitulos textoCentrado">
-            Si tienes cualquier duda, sugerencia o propuesta, no dudes en escribirnos y contárnos todo!
-            Podes ponerte en contacto con nosotros a través del siguiente formulario, o escribirnos a @mentaypeperinaok.
-            Te contestaremos en cuánto me sea posible, muchas gracias de antemano.
-        </p>
-        <div class="container">
-            <form role="form">
-                <div class="mb-3 row">
-                    <label for="name" class="form-label col-sm-12 col-md-2">Nombre</label>
-                    <div class="col-sm-12 col-md-10">
-                        <input type="text" class="form-control" id="name" placeholder="Juana">
+    <div class="textoCentrado">
+        <main>
+            <h1 class="titulo animate__animated animate__bounce">CONTACTO</h1>
+            <p class="subtitulos textoCentrado">
+                Si tienes cualquier duda, sugerencia o propuesta, no dudes en escribirnos y contárnos todo!
+                Podes ponerte en contacto con nosotros a través del siguiente formulario, o escribirnos a
+                @mentaypeperinaok.
+                Te contestaremos en cuánto me sea posible, muchas gracias de antemano.
+            </p>
+            <div class="container">
+                <form role="form">
+                    <div class="mb-3 row">
+                        <label for="name" class="form-label col-sm-12 col-md-2">Nombre</label>
+                        <div class="col-sm-12 col-md-10">
+                            <input type="text" class="form-control" id="name" placeholder="Juana">
+                        </div>
                     </div>
-                </div>
-                <div class="mb-3 row">
-                    <label for="exampleFormControlInput1" class="form-label col-sm-12 col-md-2">Correo
-                        electrónico</label>
-                    <div class="col-sm-12 col-md-10">
-                        <input type="email" class="form-control" id="exampleFormControlInput1"
-                            placeholder="name@example.com">
+                    <div class="mb-3 row">
+                        <label for="exampleFormControlInput1" class="form-label col-sm-12 col-md-2">Correo
+                            electrónico</label>
+                        <div class="col-sm-12 col-md-10">
+                            <input type="email" class="form-control" id="exampleFormControlInput1"
+                                placeholder="name@example.com">
+                        </div>
                     </div>
-                </div>
-                <div class="mb-3 row">
-                    <label for="exampleFormControlTextarea1" class="form-label col-sm-12 col-md-2">Comentario</label>
-                    <div class="col-sm-12 col-md-10">
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <div class="mb-3 row">
+                        <label for="exampleFormControlTextarea1"
+                            class="form-label col-sm-12 col-md-2">Comentario</label>
+                        <div class="col-sm-12 col-md-10">
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
                     </div>
-                </div>
+            </div>
+            <button type="submit" class="btn btn-success">Enviar</button>
+            </form>
+        </main>
+        <div class="maps">
+            <div class="direccion">
+                <p class="negrita colorParrafo textoCentrado">¿Donde nos encontramos?</p>
+                <p class="negrita textoCentrado">DIRECCION: Av. Santa Fe 928 </p>
+            </div>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d205.2716407816469!2d-58.38069251906709!3d-34.5954048997238!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccab7b25d3d97%3A0x9a8af7239625da40!2sAv.%20Santa%20Fe%20928%2C%20C1059ABQ%20CABA!5e0!3m2!1ses-419!2sar!4v1657587737693!5m2!1ses-419!2sar"
+                width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
         </div>
-        <button type="submit" class="btn btn-success">Enviar</button>
-        </form>
-    </main>
-    <div class="maps">
-        <div class="direccion">
-            <p class="negrita colorParrafo textoCentrado">¿Donde nos encontramos?</p>
-            <p class="negrita textoCentrado">DIRECCION: Av. Santa Fe 928 </p>
-        </div>
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d205.2716407816469!2d-58.38069251906709!3d-34.5954048997238!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccab7b25d3d97%3A0x9a8af7239625da40!2sAv.%20Santa%20Fe%20928%2C%20C1059ABQ%20CABA!5e0!3m2!1ses-419!2sar!4v1657587737693!5m2!1ses-419!2sar"
-            width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
+        <a
+            href="https://www.google.com.ar/maps/search/Av.+Santa+Fe+1010,+ABQ,+CABA/@-34.5944152,-58.3861278,16z/data=!3m1!4b1">
+            GOOGLE MAPS
+        </a>
     </div>
-    <a
-        href="https://www.google.com.ar/maps/search/Av.+Santa+Fe+1010,+ABQ,+CABA/@-34.5944152,-58.3861278,16z/data=!3m1!4b1">
-        GOOGLE MAPS
-    </a>
     <footer>
         <span>Nuestro Instagram:<a href="https://www.instagram.com/mentaypeperinaok"> MENTA Y PEPERINA</a> </span>
     </footer>
