--- a/views/marcas.html
+++ b/views/marcas.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/index.css" type="text/css">
     <title>Marcas</title>
 </head>
 
 <body>
-    <header>
-        <img class="logo" src="../imagenes/logito.png" alt="logo">
+    <header class="d-flex justify-content-between">
+        <img class="navbar-brand" src="../imagenes/logito.png" width="80" alt="logo">
         <ul>
-            <li class="espacio"> <a href="../index.html">Inicio</a> </li>
-            <li class="espacio"><a href="../views/recetas.html">Recetas </a> </li>
-            <li class="espacio"><a href="../views/sobrenosotros.html">Nosotros </a> </li>
-            <li class="seleccionado espacio"><a href="../views/marcas.html">Marcas </a> </li>
-            <li class="espacio"><a href="../views/contacto.html">Contacto </a> </li>
+            <li class=" espacio"> <a href="../index.html">Inicio</a> </li>
+            <li class=" espacio"><a href="recetas.html">Recetas </a> </li>
+            <li class="espacio"><a href="sobrenosotros.html">Nosotros </a> </li>
+            <li class="seleccionado espacio"><a href="marcas.html">Marcas </a> </li>
+            <li class="espacio"><a href="contacto.html">Contacto </a> </li>
         </ul>
     </header>
+    <div class="bodyCentrado">
     <h1 class="titulo animate__animated animate__bounce">MARCAS</h1>
     <p class="subtitulos">Estas son las marcas que utilizamos y recomendamos utilizar,no solo por la calidad de los
         productos sino tambien
@@ -28,24 +31,25 @@
         <article class="marcaVeggieland">
             <img class="fotoMarca" src="../imagenes/veggieland.jpg" alt="logo veggieland">
             <h3>Veggieland</h3>
-            <p class="negrita">Marca argentina vegetariana</p>
+            <p class="colorTextoPrincipal">Marca argentina vegetariana</p>
         </article>
         <article class="marcaVegetalex">
             <img class="fotoMarca" src="../imagenes/vegetalex logo.jpg" alt="logo vegetalex">
             <h3>Vegetalex</h3>
-            <p class="negrita">Marca argentina vegana y vegetariana</p>
+            <p class="colorTextoPrincipal">Marca argentina vegana y vegetariana</p>
         </article>
         <article class="marcaVivet">
             <img class="fotoMarca" src="../imagenes/vivet.png" alt="vivet logo">
             <h3>Vivet</h3>
-            <p class="negrita">Marca argentina de lacteos veganos</p>
+            <p class="colorTextoPrincipal">Marca argentina de lacteos veganos</p>
         </article>
         <article class="marcaGreenLife">
             <img class="fotoMarca" src="../imagenes/greenlife.jpg" alt="green life logo">
             <h3>Green Life</h3>
-            <p class="negrita">Marca de productos vegana</p>
+            <p class="colorTextoPrincipal">Marca de productos vegana</p>
         </article>
     </section>
+</div>
     <footer>
         <span>Nuestro Instagram:<a href="https://www.instagram.com/mentaypeperinaok"> MENTA Y PEPERINA</a> </span>
     </footer>
