--- a/views/recetas.html
+++ b/views/recetas.html
@@ -5,30 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/index.css" type="text/css">
     <title>Recetas</title>
 </head>
 
 <body>
-    <header>
-        <img class="logo" src="../imagenes/logito.png" alt="logo">
-        <ul >
-            <li class="espacio"> <a href="../index.html">Inicio</a> </li>
-            <li class="espacio seleccionado"><a href="../views/recetas.html">Recetas </a> </li>
-            <li class="espacio"><a href="../views/sobrenosotros.html">Nosotros </a> </li>
-            <li class="espacio"><a href="../views/marcas.html">Marcas </a> </li>
-            <li class="espacio"><a href="../views/contacto.html">Contacto </a> </li>
+    <header class="d-flex justify-content-between">
+        <img class="navbar-brand" src="../imagenes/logito.png" width="80" alt="logo">
+        <ul>
+            <li class=" espacio"> <a href="../index.html">Inicio</a> </li>
+            <li class="seleccionado espacio"><a href="recetas.html">Recetas </a> </li>
+            <li class="espacio"><a href="sobrenosotros.html">Nosotros </a> </li>
+            <li class="espacio"><a href="marcas.html">Marcas </a> </li>
+            <li class="espacio"><a href="contacto.html">Contacto </a> </li>
         </ul>
     </header>
     <h1 class="titulo animate__animated animate__bounce">RECETAS</h1>
     <ul class="listado">
-        <li class="subtitulos negrita listaRecetas "><a href="https://www.google.com/">Veganas</a> </li>
-        <li class="subtitulos negrita listaRecetas"><a href="https://www.google.com/">Sopas</a> </li>
-        <li class="subtitulos negrita listaRecetas"><a href="https://www.google.com/">Ensaladas</a> </li>
-        <li class="subtitulos negrita listaRecetas"><a href="https://www.google.com/">Pastas</a> </li>
-        <li class="subtitulos negrita listaRecetas"><a href="https://www.google.com/">Tartas</a> </li>
-        <li class="subtitulos negrita listaRecetas"><a href="https://www.google.com/">No carne</a> </li>
+        <li class="subtitulos vegana negrita listaRecetas "><a href="https://www.google.com/">Veganas</a> </li>
+        <li class="subtitulos negrita listaRecetas sopas"><a href="https://www.google.com/">Sopas</a> </li>
+        <li class="subtitulos negrita listaRecetas ensaladas"><a href="https://www.google.com/">Ensaladas</a> </li>
+        <li class="subtitulos negrita listaRecetas pastas"><a href="https://www.google.com/">Pastas</a> </li>
+        <li class="subtitulos negrita listaRecetas tartas"><a href="https://www.google.com/">Tartas</a> </li>
+        <li class="subtitulos negrita listaRecetas noCarne"><a href="https://www.google.com/">No carne</a> </li>
     </ul>
     <footer>
         <span>Nuestro Instagram:<a href="https://www.instagram.com/mentaypeperinaok"> MENTA Y PEPERINA</a> </span>
