--- a/views/sobrenosotros.html
+++ b/views/sobrenosotros.html
@@ -5,37 +5,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="../css/index.css" type="text/css">
     <title>Nosotros</title>
 </head>
 
 <body>
-    <header>
-        <img class="logo" src="../imagenes/logito.png" alt="logo">
+    <header class="d-flex justify-content-between">
+        <img class="navbar-brand" src="../imagenes/logito.png" width="80" alt="logo">
         <ul>
-            <li class="espacio"><a href="../index.html">Inicio</a> </li>
-            <li class="espacio"><a href="../views/recetas.html">Recetas </a> </li>
-            <li class="seleccionado espacio"><a href="../views/sobrenosotros.html">Nosotros </a> </li>
-            <li class="espacio"><a href="../views/marcas.html">Marcas </a> </li>
-            <li class="espacio"><a href="../views/contacto.html">Contacto </a> </li>
+            <li class=" espacio"> <a href="../index.html">Inicio</a> </li>
+            <li class=" espacio"><a href="recetas.html">Recetas </a> </li>
+            <li class="seleccionado espacio"><a href="sobrenosotros.html">Nosotros </a> </li>
+            <li class="espacio"><a href="marcas.html">Marcas </a> </li>
+            <li class="espacio"><a href="contacto.html">Contacto </a> </li>
         </ul>
     </header>
-    <h1 class="titulo animate__animated animate__bounce">¿QUIENES SOMOS?</h1>
-    <P class="textoCentrado">Somos dos amigos que empezaron a tener una dieta sin productos de origen animal y nos dimos
-        cuenta que el
-        pensar ¿que comemos hoy? era algo agotador por eso decidimos crear esta pagina.
-        Creemos que a través de la comida, podemos crear un mundo mejor.
-        Un mundo donde lo que comamos tenga un impacto positivo tanto en el planeta, como en nuestros cuerpos.
-        Porque lo que comemos importa.Todas las recetas que compartimos son alternativas respetuosas con los
-        animales.
-        La decisión de no comer animales puede obedecer a diversos motivos. Se dice que la mayoría lo hace por
-        cuidar la salud, otros por rechazar la cadena de explotación y defender a los animales, algunos por simple
-        gusto. También hay religiones que lo impiden y hay quienes por
-        consideraciones medioambientales toman esta decisión.
-    </P>
-    <img src="../imagenes/giphy.gif" alt="gif comiendo brocoli" width="300">
-    <p class="colorParrafo"> Esperamos que te gusten nuestras recetas como a nosotros.</p>
+    <section class="bodyCentrado">
+        <div>
+            <h1 class="titulo animate__animated animate__bounce">¿QUIENES SOMOS?</h1>
+            <P class="textoCentrado">Somos dos amigos que empezaron a tener una dieta sin productos de origen animal y
+                nos dimos
+                cuenta que el
+                pensar ¿que comemos hoy? era algo agotador por eso decidimos crear esta pagina.
+                Creemos que a través de la comida, podemos crear un mundo mejor.
+                Un mundo donde lo que comamos tenga un impacto positivo tanto en el planeta, como en nuestros cuerpos.
+                Porque lo que comemos importa.Todas las recetas que compartimos son alternativas respetuosas con los
+                animales.
+                La decisión de no comer animales puede obedecer a diversos motivos. Se dice que la mayoría lo hace por
+                cuidar la salud, otros por rechazar la cadena de explotación y defender a los animales, algunos por
+                simple
+                gusto. También hay religiones que lo impiden y hay quienes por
+                consideraciones medioambientales toman esta decisión.
+            </P>
+        </div>
+        <div class="gif">
+            <img src="../imagenes/giphy.gif" alt="gif comiendo brocoli" width="300">
+        </div>
+        <div>
+            <p class="colorParrafo"> Esperamos que te gusten nuestras recetas como a nosotros.</p>
+        </div>
+    </section>
     <footer>
         <span>Nuestro Instagram:<a href="https://www.instagram.com/mentaypeperinaok"> MENTA Y PEPERINA</a> </span>
     </footer>
