--- a/scss/views/partials/_header.scss
+++ b/scss/views/partials/_header.scss
@@ -24,18 +24,25 @@ header {
 }
 
 .logo {
-  position:absolute;
+  position: absolute;
   left: 0;
   width: 80px
 }
 
 /* query */
 
-@media only screen and (max-width: 600px) {
-  header{
+@media only screen and (max-width: 700px) {
+  header {
 
     ul {
-      font-size: 0.8rem;
+      font-size: 0.6rem;
+      font-weight: bold;
+
+    }
+
+    .navbar-brand {
+       width: 50px
     }
   }
+
 }
