--- a/scss/views/_sobrenosotros.scss
+++ b/scss/views/_sobrenosotros.scss
@@ -1,3 +1,11 @@
 .gif {
-    padding: 5% ;
+    padding: 5%;
+}
+
+/* query */
+
+@media only screen and (max-width: 600px) {
+    p {
+        color: white;
+    }
 }
